--- a/mysql_nodejs_api/package.json
+++ b/mysql_nodejs_api/package.json
@@ -18,8 +18,7 @@
   "devDependencies": {
     "ajv": "^8.12.0",
     "autoprefixer": "^10.2.6",
-    "nodemon": "^2.0.20",
-    "xml2js": "^0.4.23"
+    "nodemon": "^2.0.20"
   },
   "keywords": [],
   "description": ""
